# sv2v

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Convert.hs  LICENSE  Makefile  NOTICE  README.md  Setup.hs  notice.sh  release.sh  stack.yaml  sv2v.cabal  sv2v.hs  verilog.cabal
.github/workflows/: build_binary.yml  main.yaml  notice.yaml  resolver.yaml  test.yaml
Convert/: AlwaysKW.hs  CaseKW.hs  Logic.hs  PackedArray.hs  PackedArrayFlatten.hs  SplitPortDecl.hs  StarPort.hs  Traverse.hs  Typedef.hs
Convert/Template/: ModuleItem.hs  Stmt.hs
Data/: BitVec.hs
Language/: SystemVerilog.hs  Verilog.hs
Language/SystemVerilog/: AST.hs  Parser.hs  Simulator.hs
Language/Verilog/: AST.hs  Parser.hs  Simulator.hs
src/: Args.hs  Bugpoint.hs  Convert.hs  Job.hs  Split.hs  sv2v.hs
src/Convert/: AlwaysKW.hs  AsgnOp.hs  Assertion.hs  Bits.hs  BlockDecl.hs  CaseKW.hs  Cast.hs  DimensionQuery.hs  DoWhile.hs  DuplicateGenvar.hs  EmptyArgs.hs  Enum.hs  EventEdge.hs  ExprAsgn.hs  ExprUtils.hs  ForAsgn.hs  ForDecl.hs  Foreach.hs  FuncRet.hs  FuncRoutine.hs  GenvarName.hs  HierConst.hs  HoistPortDecls.hs  ImplicitNet.hs  Inside.hs  IntTypes.hs  Interface.hs  Jump.hs  KWArgs.hs  LogOp.hs  Logic.hs  MultiplePacked.hs  Mux.hs  NamedBlock.hs  NestPI.hs  NestTF.hs  Package.hs  PackedArray.hs  ParamNoDefault.hs  ParamType.hs  (+31 more)
src/Language/: SystemVerilog.hs
test/: README.md  run-all.sh
test/basic/: always_latch.sv  ambiguous_tore.sv  array.sv  array.v  array_in_package.sv  assert_tb.v  assign_delay.sv  attr.sv  attr.v  bit.v  bits_scope.sv  case_inside_cast.sv  cast.sv  cast.v  cast_conflict.sv  cast_nest.sv  cast_procedure.v  cast_struct_nested.sv  cast_struct_nested.v  class_ident.sv  clip_add.sv  clip_mul.sv  const.sv  data_lifetime.sv  decl_scope.v  default_nettype.sv  default_nettype.v  delay_real.sv  dimensions.sv  dimensions.v  div.sv  div.v  duplicate_cast.v  duplicate_genvar_shadow.sv  elab_task.sv  elab_task.v  else_prec.sv  else_prec.v  empty_args.v  empty_task.sv  (+268 more)
test/bugpoint/: after.sv  before.sv  run.sh
test/core/: always_attr.sv  always_attr.v  always_comb.sv  always_comb.sv.pat  always_comb.v  always_comb.vh  always_latch.v  always_latch_tb.v  always_prefix.sv  always_prefix.v  always_prefix.vh  always_prefix_tb.v  always_sense.sv  always_sense.v  always_sense.vh  always_sense_tb.v  always_spin.sv  always_spin.v  always_spin.vh  ambiguous_tore.v  array.sv  array.v  array_in_package.v  asgn_expr.sv  asgn_expr.v  asgn_sense_lhs.sv  asgn_sense_lhs.v  asgn_sense_lhs_tb.v  assert.sv  assert.v  bit.sv  bits_scope.v  case_inside_cast.v  case_violation_checks.sv  case_violation_checks.sv.pat  case_violation_checks.v  case_violation_checks_tb.v  cast.sv  cast.v  cast_conflict.v  (+366 more)
test/define/: main.sv  main.v  run.sh
test/dump/: .gitignore  example.sv  run.sh
test/error/: asgn_expr_non_lhs.sv  assert_deferred_nonzero.sv  auto_dim_int.sv  binding_mix_param.sv  binding_mix_port.sv  binding_mix_port_trail.sv  binding_not_found_class.sv  binding_not_found_overflow.sv  binding_not_found_param.sv  binding_not_found_port.sv  binding_overflow_class.sv  binding_overflow_param.sv  binding_overflow_port.sv  block_comment_eof.sv  block_start_1.sv  block_start_2.sv  block_start_3.sv  block_start_4.sv  break_inside_fork.sv  break_outside_loop.sv  byte_packed.sv  case_multiple_defaults.sv  casex_inside.sv  casez_inside.sv  charge_strength_non_trireg.sv  class_missing_item.sv  class_not_specialized.sv  class_parameter_missing_1.sv  class_parameter_missing_2.sv  class_parameter_not_expr.sv  class_parameter_not_type.sv  const_const.sv  continue_inside_fork.sv  continue_outside_loop.sv  dangling_stmt.sv  decl_after_stmt.sv  decl_bare.sv  decl_binop_asgn.sv  decl_const_var_uninit.sv  decl_const_wire.sv  (+198 more)
test/help/: check_usage.py  run.sh
test/keyword/: 1364-1995.txt  1364-2001-noconfig.txt  1364-2001.txt  1364-2005.txt  1800-2005.txt  1800-2009.txt  1800-2012.txt  run.sh
test/lex/: begin_keywords.sv  begin_keywords.v  block_comment.sv  block_comment.v  comment_no_space.sv  cond.sv  cond.v  cond.vh  file_line.sv  file_line.v  file_line.vh  include_self.sv  latin1.sv  line.sv  line.v  line.vh  macro.sv  macro.v  macro_arg_comment.sv  macro_arg_comment.v  macro_arg_escape.sv  macro_arg_invoke.sv  macro_arg_invoke.v  macro_boundary.sv  macro_boundary.v  macro_ifdef.sv  macro_iv.sv  macro_iv.v  macro_macro.sv  macro_macro.v  macro_string.sv  macro_string.v  macro_vendor_comment.sv  macro_whitespace.sv  macro_whitespace.v  no_newline.v  no_newline.vh  number.sv  number.v  number_literal_whitespace.sv  (+7 more)
test/lib/: clean_vcd.py  discover.sh  functions.sh  runner.sh  tb_dumper.v
test/nosim/: assert.sv  do_while.sv  dpi.sv  drive_strength.sv  elab_task.sv  extern.sv  final.sv  func_output.sv  func_output.sv.pat  min_typ_max.sv  net_type.sv  non_integer_type.sv  real.sv  run.sh  time.sv  trireg_charge_strength.sv  unsupported_default_nettype.sv
test/number/: gen.py  run.sh
test/relong/: README.md  alu.sv  alu.v  alu_tb.v  array.sv  array.v  array_tb.v  cache_request.sv  cache_request.v  cache_request_tb.v  case.sv  case.v  case_tb.v  complex_interface.sv  complex_interface.v  complex_interface_tb.v  double_clock.sv  double_clock.v  double_clock_tb.v  enum.sv  enum.v  enum_tb.v  fsm.sv  fsm.v  fsm_tb.v  functions.sv  functions.v  functions_tb.v  gen_struct.sv  gen_struct.v  gen_struct_tb.v  inline_concat.sv  inline_concat.v  inline_concat_tb.v  module_struct.sv  module_struct.v  port_connections.sv  port_connections.v  port_connections_tb.v  run.sh  (+15 more)
test/resolve/: module.sv  package.svh  reference.v  run.sh
test/search/: apple.sv  misdirect.sv  orange.sv  run.sh  top.sv
test/siloed/: package.svh  reference.v  run.sh
test/top/: main.sv  run.sh
test/truncate/: no_trunc.txt  run.sh  template.v  trunc_ivl_silent.txt  trunc_ivl_warns.txt
test/type_param/: sv2v.sh  sv2v_corrected.sh
test/warning/: attr.sv  class.sv  function.sv  interface.sv  localparam.sv  module.sv  module_dupe_1.sv  module_dupe_2.sv  package.sv  run.sh  task.sv
test/write/: .gitignore  one.sv  run.sh  (+1 more)
(+81 files in other folders)
