cabal-version: 2.4

name: sv2v
version: 0.0.6
synopsis: SystemVerilog to Verilog conversion
description:
  A tool for coverting SystemVerilog to Verilog. Originally forked from the
  Verilog parser found at https://github.com/tomahawkins/verilog
category: Language, Hardware, Embedded, Development

author: Zachary Snow <zach@zachjs.com>, Tom Hawkins <tomahawkins@gmail.com>
maintainer: Zachary Snow <zach@zachjs.com>
license: BSD-3-Clause
license-file: LICENSE
license-files: NOTICE
homepage: https://github.com/zachjs/sv2v

executable sv2v
  default-language: Haskell2010
  main-is: sv2v.hs
  hs-source-dirs: src
  build-tool-depends:
    , alex:alex   >= 3.2.5 && < 4
    , happy:happy >= 1.19  && < 2
  build-depends:
    , array
    , base
    , cmdargs
    , containers
    , directory
    , filepath
    , githash
    , hashable
    , mtl
    , vector
  other-modules:
    -- SystemVerilog modules
    Language.SystemVerilog
    Language.SystemVerilog.AST
    Language.SystemVerilog.AST.Attr
    Language.SystemVerilog.AST.Decl
    Language.SystemVerilog.AST.Description
    Language.SystemVerilog.AST.Expr
    Language.SystemVerilog.AST.GenItem
    Language.SystemVerilog.AST.LHS
    Language.SystemVerilog.AST.ModuleItem
    Language.SystemVerilog.AST.Number
    Language.SystemVerilog.AST.Op
    Language.SystemVerilog.AST.ShowHelp
    Language.SystemVerilog.AST.Stmt
    Language.SystemVerilog.AST.Type
    Language.SystemVerilog.Parser
    Language.SystemVerilog.Parser.Keywords
    Language.SystemVerilog.Parser.Lex
    Language.SystemVerilog.Parser.Parse
    Language.SystemVerilog.Parser.ParseDecl
    Language.SystemVerilog.Parser.Preprocess
    Language.SystemVerilog.Parser.Tokens
    -- Conversion modules
    Convert
    Convert.AlwaysKW
    Convert.AsgnOp
    Convert.Assertion
    Convert.BlockDecl
    Convert.DimensionQuery
    Convert.DuplicateGenvar
    Convert.EmptyArgs
    Convert.Enum
    Convert.ExprUtils
    Convert.ForDecl
    Convert.Foreach
    Convert.FuncRet
    Convert.FuncRoutine
    Convert.ImplicitNet
    Convert.Inside
    Convert.Interface
    Convert.IntTypes
    Convert.Jump
    Convert.KWArgs
    Convert.Logic
    Convert.LogOp
    Convert.MultiplePacked
    Convert.NamedBlock
    Convert.NestPI
    Convert.Package
    Convert.ParamType
    Convert.RemoveComments
    Convert.Scoper
    Convert.SignCast
    Convert.Simplify
    Convert.SizeCast
    Convert.StarPort
    Convert.Stream
    Convert.StringParam
    Convert.Struct
    Convert.TFBlock
    Convert.Traverse
    Convert.Typedef
    Convert.TypeOf
    Convert.UnbasedUnsized
    Convert.Unique
    Convert.UnpackedArray
    Convert.Unsigned
    Convert.Wildcard
    -- sv2v CLI modules
    Job
  ghc-options:
    -O3
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -funbox-strict-fields
    -Wall
    -j

source-repository head
  type:     git
  location: git://github.com/zachjs/sv2v.git
