name:    verilog
version: 0.0.12

category: Language, Hardware, Embedded

synopsis: Verilog preprocessor, parser, and AST.

description:
  A parser and supporting a small subset of Verilog.
  Intended for machine generated, synthesizable code.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/tomahawkins/verilog

build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  build-tools:
    alex  >= 3 && < 4,
    happy >= 1 && < 2
  build-depends:
    base       >= 4.8.2.0   && < 5.0,
    array      >= 0.5.1.0   && < 0.6

  exposed-modules:
    Data.BitVec
    Language.Verilog
    Language.Verilog.AST
    Language.Verilog.Parser
    Language.Verilog.Parser.Lex
    Language.Verilog.Parser.Parse
    Language.Verilog.Parser.Preprocess
    Language.Verilog.Parser.Tokens

  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/verilog.git

